Small fixes + Rope
+ Clock sprite
+ Start of multiple talent trees

+ Picks what apples to follow

+ Current Stats looks updated

+ Rope - multiple

--- a/src/components/ui/Menu/styles/option-menu.scss
+++ b/src/components/ui/Menu/styles/option-menu.scss
@@ -15,6 +15,7 @@
         backdrop-filter: blur(4px);
         outline: 1px solid white;
         pointer-events: all;
+        transition: all 0.2s ease-in-out;
 
         &:active {
             scale: 0.9;
