--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
-.App {
+#app {
   text-align: center;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
+
+#game-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .App-logo {
