--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#app {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
+
+#game-container {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
