End-of-round counter
+ End of round money counter

--- a/src/components/ui/Menu/styles/option-menu.scss
+++ b/src/components/ui/Menu/styles/option-menu.scss
@@ -1,3 +1,18 @@
+@property --num {
+    syntax: "<integer>";
+    initial-value: 0;
+    inherits: false;
+}
+
+.counter {
+    transition: --num 1s;
+    counter-set: num var(--num);
+
+    &::after {
+        content: counter(num);
+    }
+}
+
 .option-menu {
     //margin: auto;
     position: absolute;
