--- a/src/components/ui/Menu/styles/option-menu.css
+++ b/src/components/ui/Menu/styles/option-menu.css
@@ -1,3 +1,16 @@
+@property --num {
+  syntax: "<integer>";
+  initial-value: 0;
+  inherits: false;
+}
+.counter {
+  transition: --num 1s;
+  counter-set: num var(--num);
+}
+.counter::after {
+  content: counter(num);
+}
+
 .option-menu {
   position: absolute;
   display: flex;
