--- a/src/components/ui/Menu/styles/option-menu.scss
+++ b/src/components/ui/Menu/styles/option-menu.scss
@@ -26,9 +26,9 @@
 
     & button {
         width: 80%;
-        height: 4em;
-        backdrop-filter: blur(4px);
-        outline: 1px solid white;
+        //height: 4em;
+        //backdrop-filter: blur(4px);
+        //outline: 1px solid white;
         pointer-events: all;
         transition: all 0.2s ease-in-out;
 
