--- a/src/components/ui/Menu/styles/option-menu.css
+++ b/src/components/ui/Menu/styles/option-menu.css
@@ -19,7 +19,6 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  gap: 1em;
 }
 .option-menu button {
   width: 80%;
@@ -28,4 +27,20 @@
 }
 .option-menu button:active {
   scale: 0.9;
-}/*# sourceMappingURL=option-menu.css.map */
+}
+
+.galaxy-noise {
+  filter: hue-rotate(90deg) saturate(200%);
+}
+
+/*
+.galaxy-noise::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.5);
+  mix-blend-mode: multiply;
+}*//*# sourceMappingURL=option-menu.css.map */
