--- a/src/components/ui/Menu/styles/option-menu.scss
+++ b/src/components/ui/Menu/styles/option-menu.scss
@@ -22,7 +22,6 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    gap: 1em;
 
     & button {
         width: 80%;
@@ -37,3 +36,18 @@
         }
     }
 }
+
+.galaxy-noise {
+    filter: hue-rotate(90deg) saturate(200%);
+}
+/*
+.galaxy-noise::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.5);
+  mix-blend-mode: multiply;
+}*/
