--- a/src/components/ui/Menu/styles/option-menu.scss
+++ b/src/components/ui/Menu/styles/option-menu.scss
@@ -24,6 +24,10 @@
     height: 100%;
 
     & button {
+        pointer-events: all;
+    }
+
+    & > button {
         width: 80%;
         //height: 4em;
         //backdrop-filter: blur(4px);
