--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
+@property --opacity {
+    syntax: "<number>";
+    inherits: false;
+    initial-value: 0;
+}
+
+@property --opacityMain {
+    syntax: "<number>";
+    inherits: false;
+    initial-value: 0;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -28,3 +40,4 @@ code {
   height: 100%;
   min-height: 100vh;
 }
+
